force-app/main/default/objects/FS_WorkBook_Holder__c/FS_WorkBook_Holder__c.object-meta.xml
<CustomObject>
    <description>Object that holds workbook file as an attachment</description>
    <label>WorkBook Holder</label>
    <nameField>
        <displayFormat>WB-{0000}</displayFormat>
        <label>WorkBook Holder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkBook Holder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>