force-app/main/default/objects/FS_WorkBook_Holder__c/fields/FS_FCHeaderId__c.field-meta.xml
<CustomField>
    <fullName>FS_FCHeaderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the Flavor change header ID which is created when a mass upload of flavor change happens at HQ/Chain level. We use this Id to create all the uploaded records under this ID</description>
    <label>Flavor Change Header</label>
    <referenceTo>FS_Flavor_Change_Head__c</referenceTo>
    <relationshipLabel>WorkBook Holder</relationshipLabel>
    <relationshipName>WorkBook_Holder</relationshipName>
    <type>Lookup</type>
</CustomField>