force-app/main/default/objects/FS_WorkBook_Holder__c/fields/FS_Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Batches__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to display the total batches for the batch class</description>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>