force-app/main/default/objects/FS_WorkBook_Holder__c/fields/FS_Total_Number_of_Failed_Records__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Number_of_Failed_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field to display valid records that were not updated.</description>
    <label>Total Number of Failed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>