force-app/main/default/objects/FS_WorkBook_Holder__c/fields/FS_Total_Number_of_Records__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Number_of_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field has the number of records in the csv file</description>
    <label>Total Number of Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>