force-app/main/default/objects/FS_WorkBook_Holder__c/fields/FS_Total_Number_of_Success_Records__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Number_of_Success_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field that displays all valid records that were updated</description>
    <label>Total Number of Success Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>