force-app/main/default/objects/FS_WorkBook_Holder__c/fields/FS_WorkBook_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_WorkBook_Name__c</fullName>
    <description>Name of the WorkBook Name</description>
    <label>WorkBook Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>